--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,8 @@ jdbc.url=jdbc:mysql://127.0.0.1:3306/o2o?useUnicode=true&characterEncoding=utf8&
 #数据库用户名（已加密）
 jdbc.username=WnplV/ietfQ=
 #数据库密码（已加密）
-#jdbc.password=QAHlVoUc49w=
-jdbc.password=WnplV/ietfQ=
+jdbc.password=QAHlVoUc49w=
+#jdbc.password=WnplV/ietfQ=
 
 #Mybatis
 mybatis_config_file=mybatis-config.xml
@@ -49,9 +49,9 @@ spring.mvc.view.prefix=/WEB-INF/html/
 spring.mvc.view.suffix=.html
 
 #微信相关
-wechat.appid=wxd7f6c5b8899fba83
+wechat.appid=wxbba1b1cf9e21e791
 wechat.prefix=https://open.weixin.qq.com/connect/oauth2/authorize?appid=${wechat.appid}&redirect_uri=
 wechat.middle=&response_type=code&scope=snsapi_userinfo&state=
 wechat.suffix=#wechat_redirect
 
-wechat.auth.url=http://o2o.yitiaojieinfo.com/o2oMaven/shopadmin/addshopauthmap
+wechat.auth.url=http://39.108.13.136/o2oMaven/shopadmin/addshopauthmap
