--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,8 @@ jdbc.url=jdbc:mysql://127.0.0.1:3306/o2o?useUnicode=true&characterEncoding=utf8&
 #数据库用户名（已加密）
 jdbc.username=WnplV/ietfQ=
 #数据库密码（已加密）
-jdbc.password=QAHlVoUc49w=
-#jdbc.password=WnplV/ietfQ=
+#jdbc.password=QAHlVoUc49w=
+jdbc.password=WnplV/ietfQ=
 
 #Mybatis
 mybatis_config_file=mybatis-config.xml
