html,js,Controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 server.port=8080
 #加入/o2o前缀
 server.context-path=/o2oMaven
-
 #DataSource
 #数据库驱动
 jdbc.driver=com.mysql.jdbc.Driver
@@ -55,3 +54,4 @@ wechat.middle=&response_type=code&scope=snsapi_userinfo&state=
 wechat.suffix=#wechat_redirect
 
 wechat.auth.url=http://39.108.13.136/o2oMaven/shopadmin/addshopauthmap
+wechat.exchange.url=http://39.108.13.136/o2oMaven/shopadmin/exchangeaward
